maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:6: error: value &&! is not a member of Boolean
    if(r==0&&!estFaceMur())
           ^